--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -11,6 +11,12 @@
 
     </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
+    <ImageView
+        android:id="@+id/iv_step_image"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="8dp"/>
     <TextView
         android:id="@+id/fr_tv_description"
         android:layout_width="match_parent"
