--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Ingredients list : "
+            android:text="@string/ingredients"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -24,7 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="6sp"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:paddingStart="6sp"
+            tools:ignore="RtlSymmetry" />
 
     </LinearLayout>
 
