--- a/app/src/main/res/xml-v17/ingredient_list_widget_info.xml
+++ b/app/src/main/res/xml-v17/ingredient_list_widget_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:initialKeyguardLayout="@layout/ingredient_list_widget"
     android:initialLayout="@layout/ingredient_list_widget"
     android:minHeight="130dp"
@@ -8,7 +7,6 @@
     android:previewImage="@drawable/widget_icon"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"
-    tools:targetApi="jelly_bean_mr1">
+    android:widgetCategory="home_screen">
 
 </appwidget-provider>
