--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -16,18 +16,18 @@
             android:padding="16dp">
 
             <ImageView
-                android:layout_weight="0"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/food_icon"
+                android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:layout_weight="0"
                 android:contentDescription="@string/food_icon"
-                android:layout_marginEnd="8dp" />
+                android:src="@drawable/food_icon" />
 
             <LinearLayout
-                android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -35,16 +35,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_servings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom" />
 
             </LinearLayout>
-
 
 
         </LinearLayout>
