--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -18,9 +18,9 @@
             android:id="@+id/next_step_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/next_step"
+            android:layout_gravity="bottom"
             android:onClick="goToNextStep"
-            android:layout_gravity="bottom"/>
+            android:text="@string/next_step" />
 
     </LinearLayout>
 
